--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -12,10 +12,11 @@
 	border-top: 2px solid var(--primary);
 	overflow: auto;
 	overscroll-behavior: none;
+	transform: translateX(-1px);
 
 	display: grid;
 	grid-template-columns: 1fr;
-	transition: all 300ms linear;
+	transition: 300ms ease-in-out;
 
 	&::-webkit-scrollbar {
 		width: 8px;
@@ -62,6 +63,7 @@ button.sidebar_toggle_btn {
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
+	z-index: 999;
 }
 
 button.sidebar_toggle_btn:hover {
@@ -107,4 +109,31 @@ li.sidebar_list_item:hover a.sidebar_list_link {
 li.sidebar_list_item.active,
 li.sidebar_list_item:hover {
 	border-color: var(--primary);
+}
+
+@media (max-width: 992px) {
+	.sidebar {
+		position: fixed;
+		top: 60px;
+		width: 64px;
+		margin-top: 0;
+		background: transparent;
+		/* color: transparent; */
+		border-color: transparent;
+		grid-template-columns: 0fr;
+	}
+
+	.sidebar.collapsed {
+		width: 100%;
+		grid-template-columns: 1fr;
+		background: var(--base-bg);
+		color: var(--base-tx);
+		border: 1px solid var(--primary-bd);
+	}
+
+	button.sidebar_toggle_btn {
+		top: -1.75rem;
+		left: 0.75rem;
+		background: var(--secondary);
+	}
 }
