--- a/src/styles/store.css
+++ b/src/styles/store.css
@@ -136,3 +136,11 @@ a.store_card:hover {
 .store_card_content {
 	padding: 0.25rem 2rem 0.5rem;
 }
+
+@media (max-width: 992px) {
+	.store_item_card {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 0.5rem;
+		padding: 0.5rem;
+	}
+}
