--- a/src/styles/topnav.css
+++ b/src/styles/topnav.css
@@ -254,10 +254,17 @@ span.usernav_tooltip::before {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 350px;
+	width: 380px;
+	height: 500px;
+}
+
+.form > div {
+	position: relative;
+	width: 100%;
 	height: auto;
 	background: var(--base-bg);
 	border-radius: 0.625rem;
+	box-shadow: 0 8px 10px -4px rgba(0, 0, 0, 0.3);
 }
 
 button.close_btn {
@@ -283,13 +290,13 @@ button.close_btn:hover {
 .btn_group {
 	display: flex;
 	width: 100%;
+	height: 3rem;
 	background: var(--primary);
 	border-radius: 0.625rem 0.625rem 0 0;
 	overflow: hidden;
 }
 
 .btn_group button {
-	flex: 1;
 	display: block;
 	text-align: center;
 	width: 100%;
@@ -308,14 +315,16 @@ button.close_btn:hover {
 
 .login_group {
 	width: 100%;
-	padding: 1rem 2rem;
+	height: calc(100% - 3rem);
+	padding: 1rem 2rem 2rem;
 }
 
 .form input[type="text"],
+.form input[type="email"],
 .form input[type="password"] {
 	display: block;
 	width: 100%;
-	margin: 0.25rem auto 1rem;
+	margin: 0.5rem auto 1rem;
 	padding: 0.5rem;
 	border: 1px solid #bbb;
 	border-radius: 0.625rem;
@@ -323,45 +332,102 @@ button.close_btn:hover {
 	transition: 300ms ease;
 }
 
-.form input[type="text"]:hover,
 .form input[type="text"]:focus,
-.form input[type="password"]:hover,
+.form input[type="email"]:focus,
 .form input[type="password"]:focus {
 	border-color: var(--primary);
 	box-shadow: none;
 	transform: translateY(4px);
 }
 
+.othersGroup {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 1rem 0 2rem;
+}
+
 a.forget_password {
-	text-decoration: none;
-	display: block;
+	display: flex;
+	align-items: center;
 	width: fit-content;
 	margin-left: auto;
+	padding: 0.25rem;
+	border-bottom: 2px dotted var(--secondary);
 }
 
 a.forget_password:hover {
 	color: var(--primary);
 }
 
-button.btn_login {
-	display: block;
-	margin: 1rem 0 0 auto;
-	padding: 0.75rem 2.5rem;
-	outline: none;
-	border: 1px solid #ccc;
-	border-radius: 0.625rem;
-	box-shadow: 0 6px 0 -2px var(--secondary);
-	transition: box-shadow 300ms ease, transform 300ms ease;
+a.agree {
+	margin-left: 0.125rem;
+	border-bottom: 2px dotted var(--secondary);
 }
 
-button.btn_login:hover {
+a.agree:hover {
+	color: var(--primary);
+}
+
+.othersGroup input[type="checkbox"],
+.othersGroup > label {
+	cursor: pointer;
+}
+
+.othersGroup svg {
+	width: 1rem;
+	height: 1rem;
+	margin-right: 0.25rem;
+	padding: 0.25rem;
+	background: var(--primary);
+	color: var(--light);
+	border-radius: 50%;
+}
+
+button.btn_submit {
+	width: 100%;
+	padding: 1.25rem 2.5rem;
+	outline: none;
+	color: var(--base-tx);
+	border: 1px solid #ccc;
+	border-radius: 0.625rem;
+	font-size: 1.125rem;
+	box-shadow: 0 6px 0 -2px var(--secondary);
+	transition: box-shadow 300ms ease, transform 300ms ease;
+	text-align: center;
+}
+
+button.btn_submit:hover {
 	box-shadow: 0 5px 0 -2px var(--secondary);
 	transform: translateY(3px);
 }
 
-button.btn_login:active {
+button.btn_submit:active {
 	background: var(--secondary);
+	color: #000;
 	border-color: var(--secondary);
 	box-shadow: none;
 	transform: translateY(4px);
+}
+
+button.btn_submit span {
+	display: inline-block;
+	width: 25%;
+}
+
+p.result_text {
+	text-align: center;
+	margin-top: 2rem;
+	padding: 0.5rem;
+	border-radius: 0.25rem;
+}
+
+p.result_text.text_success {
+	background: hsl(120, 73%, 90%);
+	color: green;
+}
+
+p.result_text.text_fail {
+	background: hsl(0, 100%, 90%);
+	color: red;
 }
